// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TextArea Text Area Sizes 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
}

.emotion-3 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 2px solid transparent;
  box-shadow: 0 0 0 1px #cfd7e5;
}

.emotion-3:focus-within,
.emotion-3:hover {
  box-shadow: 0 0 0 1px transparent;
}

.emotion-3:hover {
  background-color: #f7f7f7!important;
  border-color: #5f6c85;
  box-shadow: false;
}

.emotion-3:focus-within {
  border-color: #5f6c85;
  background-color: white;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 12px 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  background: transparent;
  border: none;
  color: black;
  display: block;
  position: relative;
  width: 100%;
  z-index: 1;
  font-size: 0.875rem;
  text-overflow: ellipsis;
  resize: both;
}

.emotion-6+label {
  font-size: 0.875rem;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6::-webkit-input-placeholder {
  color: #444d5f;
}

.emotion-6::-moz-placeholder {
  color: #444d5f;
}

.emotion-6:-ms-input-placeholder {
  color: #444d5f;
}

.emotion-6::placeholder {
  color: #444d5f;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(3px, -35%) scale(0.8);
  -moz-transform: translate(3px, -35%) scale(0.8);
  -ms-transform: translate(3px, -35%) scale(0.8);
  transform: translate(3px, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <textarea
                className="emotion-6"
                cols={10}
                placeholder="Label"
                required={false}
                rows={10}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <textarea
                className="emotion-6"
                cols={35}
                placeholder="Label"
                required={false}
                rows={20}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextArea Text Area Types 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
}

.emotion-3 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 2px solid transparent;
}

.emotion-3:hover {
  background-color: #f7f7f7!important;
  border-color: false;
  box-shadow: false;
}

.emotion-3:focus-within {
  border-color: #5f6c85;
  background-color: white;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 12px 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  background: transparent;
  border: none;
  color: black;
  display: block;
  position: relative;
  width: 100%;
  z-index: 1;
  font-size: 0.875rem;
  text-overflow: ellipsis;
  resize: both;
}

.emotion-6+label {
  font-size: 0.875rem;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6::-webkit-input-placeholder {
  color: #444d5f;
}

.emotion-6::-moz-placeholder {
  color: #444d5f;
}

.emotion-6:-ms-input-placeholder {
  color: #444d5f;
}

.emotion-6::placeholder {
  color: #444d5f;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(3px, -35%) scale(0.8);
  -moz-transform: translate(3px, -35%) scale(0.8);
  -ms-transform: translate(3px, -35%) scale(0.8);
  transform: translate(3px, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-8 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 2px solid transparent;
  box-shadow: 0 0 0 1px #cfd7e5;
}

.emotion-8:focus-within,
.emotion-8:hover {
  box-shadow: 0 0 0 1px transparent;
}

.emotion-8:hover {
  background-color: #f7f7f7!important;
  border-color: #5f6c85;
  box-shadow: false;
}

.emotion-8:focus-within {
  border-color: #5f6c85;
  background-color: white;
}

.emotion-13 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 2px solid transparent;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
}

.emotion-13:hover {
  background-color: #f7f7f7!important;
  border-color: false;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
}

.emotion-13:focus-within {
  border-color: #5f6c85;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
  background-color: white;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <textarea
                className="emotion-6"
                placeholder="placeholder here"
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-8"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <textarea
                className="emotion-6"
                placeholder="placeholder here"
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-13"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <textarea
                className="emotion-6"
                placeholder="placeholder here"
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextArea Text Area with KNOBS 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
}

.emotion-3 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 2px solid transparent;
}

.emotion-3:hover {
  background-color: #f7f7f7!important;
  border-color: false;
  box-shadow: false;
}

.emotion-3:focus-within {
  border-color: #5f6c85;
  background-color: white;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 12px 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  background: transparent;
  border: none;
  color: black;
  display: block;
  position: relative;
  width: 100%;
  z-index: 1;
  font-size: 0.875rem;
  text-overflow: ellipsis;
  resize: both;
}

.emotion-6+label {
  font-size: 0.875rem;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6::-webkit-input-placeholder {
  color: #444d5f;
}

.emotion-6::-moz-placeholder {
  color: #444d5f;
}

.emotion-6:-ms-input-placeholder {
  color: #444d5f;
}

.emotion-6::placeholder {
  color: #444d5f;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(3px, -35%) scale(0.8);
  -moz-transform: translate(3px, -35%) scale(0.8);
  -ms-transform: translate(3px, -35%) scale(0.8);
  transform: translate(3px, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <textarea
                className="emotion-6"
                disabled={false}
                placeholder="Label"
                required={false}
                status="normal"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextArea TextArea disabled with label 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
}

.emotion-3 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: not-allowed;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  opacity: 0.5;
  border: 2px solid transparent;
}

.emotion-3:focus-within {
  border-color: #5f6c85;
  background-color: white;
}

.emotion-3:before {
  content: '';
  background-color: rgba(255, 255, 255, 0.15);
  height: 100%;
  width: 100%;
  position: absolute;
  left: 0;
  top: 0;
  z-index: 1;
}

.emotion-3>input,
.emotion-3>textarea {
  color: #444d5f;
  fill: #444d5f;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 12px 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  width: 100%;
}

.emotion-6 {
  background: transparent;
  border: none;
  color: black;
  display: block;
  position: relative;
  width: 100%;
  z-index: 1;
  font-size: 0.875rem;
  text-overflow: ellipsis;
  resize: both;
}

.emotion-6+label {
  font-size: 0.875rem;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6::-webkit-input-placeholder {
  color: #444d5f;
}

.emotion-6::-moz-placeholder {
  color: #444d5f;
}

.emotion-6:-ms-input-placeholder {
  color: #444d5f;
}

.emotion-6::placeholder {
  color: #444d5f;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus+label,
.emotion-6:not(:placeholder-shown)+label {
  -webkit-transform: translate(3px, -35%) scale(0.8);
  -moz-transform: translate(3px, -35%) scale(0.8);
  -ms-transform: translate(3px, -35%) scale(0.8);
  transform: translate(3px, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-8 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: not-allowed;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  opacity: 0.5;
  border: 2px solid transparent;
  box-shadow: 0 0 0 1px #cfd7e5;
}

.emotion-8:focus-within,
.emotion-8:hover {
  box-shadow: 0 0 0 1px #cfd7e5;
}

.emotion-8:focus-within {
  border-color: #5f6c85;
  background-color: white;
}

.emotion-8:before {
  content: '';
  background-color: rgba(255, 255, 255, 0.15);
  height: 100%;
  width: 100%;
  position: absolute;
  left: 0;
  top: 0;
  z-index: 1;
}

.emotion-8>input,
.emotion-8>textarea {
  color: #444d5f;
  fill: #444d5f;
}

.emotion-13 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: not-allowed;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  opacity: 0.5;
  border: 2px solid transparent;
  box-shadow: initial;
}

.emotion-13:focus-within {
  border-color: #5f6c85;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
  background-color: white;
}

.emotion-13:before {
  content: '';
  background-color: rgba(255, 255, 255, 0.15);
  height: 100%;
  width: 100%;
  position: absolute;
  left: 0;
  top: 0;
  z-index: 1;
}

.emotion-13>input,
.emotion-13>textarea {
  color: #444d5f;
  fill: #444d5f;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <textarea
                className="emotion-6"
                disabled={true}
                placeholder="Label"
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-8"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <textarea
                className="emotion-6"
                disabled={true}
                placeholder="Label"
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-13"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <textarea
                className="emotion-6"
                disabled={true}
                placeholder="Label"
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextArea TextArea with label and statuses 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
}

.emotion-4 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 2px solid transparent;
  border-color: #e5143d;
}

.emotion-4:hover {
  background-color: #f7f7f7!important;
  border-color: false;
  box-shadow: false;
}

.emotion-4:focus-within {
  background-color: white;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 12px 1rem;
}

.emotion-5>div {
  position: relative;
}

.emotion-6 {
  width: 100%;
}

.emotion-7 {
  background: transparent;
  border: none;
  color: black;
  display: block;
  position: relative;
  width: 100%;
  z-index: 1;
  font-size: 0.875rem;
  text-overflow: ellipsis;
  resize: both;
}

.emotion-7+label {
  font-size: 0.875rem;
}

.emotion-7:focus {
  outline: none;
}

.emotion-7::-webkit-input-placeholder {
  color: #444d5f;
}

.emotion-7::-moz-placeholder {
  color: #444d5f;
}

.emotion-7:-ms-input-placeholder {
  color: #444d5f;
}

.emotion-7::placeholder {
  color: #444d5f;
}

.emotion-7:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-7:focus+label,
.emotion-7:not(:placeholder-shown)+label {
  -webkit-transform: translate(3px, -35%) scale(0.8);
  -moz-transform: translate(3px, -35%) scale(0.8);
  -ms-transform: translate(3px, -35%) scale(0.8);
  transform: translate(3px, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #e5143d;
  font-size: 0.75rem;
  line-height: 1;
  padding: 0.5rem 0 0;
}

.emotion-8 svg {
  padding: 0 0.125rem;
}

.emotion-8 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0 0.125rem;
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: #FF1744;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-10 path {
  fill: #FF1744;
}

.emotion-12 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 2px solid transparent;
  box-shadow: 0 0 0 1px transparent;
  border-color: #e5143d;
}

.emotion-12:focus-within,
.emotion-12:hover {
  box-shadow: 0 0 0 1px transparent;
}

.emotion-12:hover {
  background-color: #f7f7f7!important;
  border-color: false;
  box-shadow: false;
}

.emotion-12:focus-within {
  background-color: white;
}

.emotion-20 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 2px solid transparent;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
  border-color: #e5143d;
}

.emotion-20:hover {
  background-color: #f7f7f7!important;
  border-color: false;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
}

.emotion-20:focus-within {
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
  background-color: white;
}

.emotion-29 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 2px solid transparent;
}

.emotion-29:hover {
  background-color: #f7f7f7!important;
  border-color: false;
  box-shadow: false;
}

.emotion-29:focus-within {
  border-color: #5f6c85;
  background-color: white;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #5f6c85;
  font-size: 0.75rem;
  line-height: 1;
  padding: 0.5rem 0 0;
}

.emotion-33 svg {
  padding: 0 0.125rem;
}

.emotion-33 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0 0.125rem;
}

.emotion-35 {
  fill: #5f6c85;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-35 path {
  fill: #5f6c85;
}

.emotion-37 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 2px solid transparent;
  box-shadow: 0 0 0 1px #cfd7e5;
}

.emotion-37:focus-within,
.emotion-37:hover {
  box-shadow: 0 0 0 1px transparent;
}

.emotion-37:hover {
  background-color: #f7f7f7!important;
  border-color: #5f6c85;
  box-shadow: false;
}

.emotion-37:focus-within {
  border-color: #5f6c85;
  background-color: white;
}

.emotion-45 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  border-radius: 0.25rem;
  cursor: auto;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  background-color: white;
  border: 2px solid transparent;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
}

.emotion-45:hover {
  background-color: #f7f7f7!important;
  border-color: false;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
}

.emotion-45:focus-within {
  border-color: #5f6c85;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
  background-color: white;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-1"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <textarea
                    className="emotion-7"
                    placeholder="Label"
                    required={false}
                    status="error"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="emotion-8"
          >
            <span
              className="emotion-9"
              onClick={[Function]}
            >
              <span
                className="emotion-10"
              />
            </span>
            Error in Text Area
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-12"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <textarea
                    className="emotion-7"
                    placeholder="Label"
                    required={false}
                    status="error"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="emotion-8"
          >
            <span
              className="emotion-9"
              onClick={[Function]}
            >
              <span
                className="emotion-10"
              />
            </span>
            Error in Text Area
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-20"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <textarea
                    className="emotion-7"
                    placeholder="Label"
                    required={false}
                    status="error"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="emotion-8"
          >
            <span
              className="emotion-9"
              onClick={[Function]}
            >
              <span
                className="emotion-10"
              />
            </span>
            Error in Text Area
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-1"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-29"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <textarea
                    className="emotion-7"
                    placeholder="Label"
                    required={false}
                    status="hint"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="emotion-33"
          >
            <span
              className="emotion-9"
              onClick={[Function]}
            >
              <span
                className="emotion-35"
              />
            </span>
            Error in Text Area
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-37"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <textarea
                    className="emotion-7"
                    placeholder="Label"
                    required={false}
                    status="hint"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="emotion-33"
          >
            <span
              className="emotion-9"
              onClick={[Function]}
            >
              <span
                className="emotion-35"
              />
            </span>
            Error in Text Area
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-45"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <textarea
                    className="emotion-7"
                    placeholder="Label"
                    required={false}
                    status="hint"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="emotion-33"
          >
            <span
              className="emotion-9"
              onClick={[Function]}
            >
              <span
                className="emotion-35"
              />
            </span>
            Error in Text Area
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
